--- a/index.html
+++ b/index.html
@@ -213,25 +213,25 @@
   <div class="section portfolio">
     <h2>Portfolio</h2>
     <ul>
-      <li>WWE Champions Game - <a href="#">View link</a></li>
-      <li>Sacombank Web& App - <a href="#">View link</a></li>
-      <li>HDBank Mobile App - <a href="#">View link</a></li>
-      <li>Outdoors Marketplace - <a href="#">View link</a></li>
-      <li>Third Place Marketplace - <a href="#">View link</a></li>
-      <li>EVN App - <a href="#">View link</a></li>
-      <li>Propy Mortgage - <a href="#">View link</a></li>
-      <li>Other Apps - <a href="#">View link</a></li>
-      <li>Other Designs Layouts - <a href="#">View link</a></li>
+      <li>WWE Champions Game - <a href="https://www.figma.com/design/bCfOpe9erYbwJHPFtZQ4zP/WWE-V2-(edit---y-console)-(rep)?node-id=25710-133&t=DpCqEQzj6OED19jK-4" target="_blank">View link</a></li>
+      <li>Sacombank Web& App - <a href="https://www.figma.com/design/RbxOSHy84nMzCKU5o7CLTB/Sacombank-Design-Direction---private?node-id=1307-3370&t=2FCqcArhQglGicvf-4" target="_blank">View link</a></li>
+      <li>HDBank Mobile App - <a href="https://www.figma.com/design/RbxOSHy84nMzCKU5o7CLTB/Sacombank-Design-Direction---private?node-id=1307-3370&t=2FCqcArhQglGicvf-4" target="_blank">View link</a></li>
+      <li>Outdoors Marketplace - <a href="https://www.figma.com/design/tgm79yu5Ei2MpYeGvsenpg/UOUTDOORS-private?node-id=1-2&t=hPALXmCWa6KDijrJ-4" target="_blank">View link</a></li>
+      <li>Third Place Marketplace - <a href="https://www.figma.com/design/DH3wYYvun3dm4fXI1Wh73Q/Third-Place---(Backup30nov)?node-id=37-8778&t=tsZj3I5P4vBfh7R6-4" target="_blank">View link</a></li>
+      <li>EVN App - <a href="https://www.figma.com/design/lWJflNkyUKWSvsEkEyH0Mg/PTI-2-VNPOST-(Copy)?node-id=0-1&t=6czU6mrEBZr9GktR-1" target="_blank">View link</a></li>
+      <li>Propy Mortgage - <a href="https://www.figma.com/design/XUQ8bKHFJVAJpGmLvjG9mO/Untitled-(Copy)?node-id=0-1&t=FCGqLMKqKOmzD1el-1" target="_blank">View link</a></li>
+      <li>Other Apps - <a href="https://www.figma.com/design/tFr8f3NxSw4UbuW4C7tPnd/Mortgage-Improvement-(Y)?node-id=416-20022&t=Cajpxop6ZypfdjhR-4" target="_blank">View link</a></li>
+      <li>Other Designs Layouts - <a href="https://www.figma.com/design/tFr8f3NxSw4UbuW4C7tPnd/Mortgage-Improvement-(Y)?node-id=416-20022&t=Cajpxop6ZypfdjhR-4" target="_blank">View link</a></li>
     </ul>
   </div>
 
   <div class="section trainings">
     <h2>Other Trainings</h2>
     <ul>
-      <li>Google UX Design Certificate (Coursera) - <a href="#">View link</a></li>
-      <li>AWS Certified Cloud Practitioner - <a href="#">View link</a></li>
-      <li>The Complete Web Development Bootcamp (Udemy) - <a href="#">View link</a></li>
-      <li>Wix Developer Certificate - <a href="#">View link</a></li>
+      <li>Google UX Design Certificate (Coursera) - <a href="https://www.figma.com/design/VzqXj5PCmcyqsfUz0wQZ6V/CV--Copy-?node-id=2039-152&t=w7Mk7vdtfkso5bFN-4" target="_blank">View link</a></li>
+      <li>AWS Certified Cloud Practitioner - <a href="https://www.figma.com/design/VzqXj5PCmcyqsfUz0wQZ6V/CV--Copy-?node-id=2039-152&t=w7Mk7vdtfkso5bFN-4" target="_blank">View link</a></li>
+      <li>The Complete Web Development Bootcamp (Udemy) - <a href="https://www.figma.com/design/VzqXj5PCmcyqsfUz0wQZ6V/CV--Copy-?node-id=2039-152&t=w7Mk7vdtfkso5bFN-4" target="_blank">View link</a></li>
+      <li>Wix Developer Certificate - <a href="https://www.figma.com/design/VzqXj5PCmcyqsfUz0wQZ6V/CV--Copy-?node-id=2039-152&t=w7Mk7vdtfkso5bFN-4" target="_blank">View link</a></li>
     </ul>
   </div>
 </body>
